# slint-demo

./: Cargo.toml  Cross.toml  Dockerfile
src/: main.rs
